--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyLibrary</string>
+    <string name="btn_home_search">검색</string>
+    <string name="text_ihome_label_publisher">출판사</string>
+    <string name="text_ihome_label_price">가격</string>
 </resources>
