--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="text_dlg_delete_category_title">폴더를\n삭제하시겠습니까?</string>
     <string name="text_home_nosearch">검색 결과가 없어요</string>
     <string name="text_home_nosearch_subhead">다시 한번 검색해주세요 :)</string>
+    <string name="text_dlg_delete_cancel">취소</string>
+    <string name="text_dlg_delete_confirm">확인</string>
 </resources>
