design: signup and login fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,29 @@
     <string name="text_home_nosearch_subhead">다시 한번 검색해주세요 :)</string>
     <string name="text_dlg_delete_cancel">취소</string>
     <string name="text_dlg_delete_confirm">확인</string>
+    <string name="text_login_email_title">이메일로 로그인</string>
+    <string name="text_login_email_label_email">이메일</string>
+    <string name="edit_login_email_email">abcd1234@gmail.com</string>
+    <string name="text_login_email_label_pwd">비밀번호</string>
+    <string name="edit_login_email_pwd">6자리 이상</string>
+    <string name="text_login_email_find"><u>아직 계정이 없으신가요?</u></string>
+    <string name="btn_login_email_confirm">로그인</string>
+    <string name="text_login_title">My Library</string>
+    <string name="text_login_btn">이메일로 로그인</string>
+    <string name="text_login_label_signup">아직 계정이 없으신가요?</string>
+    <string name="text_login_signup"><u>여기에서 계정을 만드세요!</u></string>
+    <string name="text_signup_email_title">이메일로 회원가입</string>
+    <string name="text_signup_email_label">이메일 입력</string>
+    <string name="edit_signup_email_input">abcd1234@gmail.com</string>
+    <string name="btn_signup_emali_confirm">계속</string>
+    <string name="text_signup_pwd_title">이메일로 회원가입</string>
+    <string name="text_signup_pwd_label">비밀번호 입력</string>
+    <string name="edit_signup_pwd_input">6자리 이상 입력</string>
+    <string name="text_signup_pwd_label_confirm">비밀번호 재입력</string>
+    <string name="edit_signup_pwd_confirm_input">비밀번호 확인</string>
+    <string name="btn_signup_pwd_confirm">계속</string>
+    <string name="text_signup_username_title">이메일로 회원가입</string>
+    <string name="text_signup_username_label">닉네임 입력</string>
+    <string name="edit_signup_username_input">두 글자 이상 입력</string>
+    <string name="btn_signup_username_confirm">완료</string>
 </resources>
