--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,5 @@
 <resources>
     <string name="app_name">MyLibrary</string>
-    <string name="btn_home_search">검색</string>
-    <string name="text_ihome_label_publisher">출판사</string>
-    <string name="text_ihome_label_price">가격</string>
-    <string name="text_ihome_label_author">작가</string>
-    <string name="text_ihome_link"><u>링크</u></string>
     <string name="edit_home_search_hint">검색어를 입력하세요</string>
     <string name="text_dlg_create_category_title">추가할 폴더의 이름을\n입력해주세요.</string>
     <string name="text_user_add">추가</string>
@@ -12,8 +7,8 @@
     <string name="text_edit_category_nocontent_head">아직 폴더가 없어요</string>
     <string name="btn_edit_category_nocontent">추가</string>
     <string name="text_dlg_delete_category_title">폴더를\n삭제하시겠습니까?</string>
-    <string name="text_home_nosearch">검색 결과가 없어요</string>
-    <string name="text_home_nosearch_subhead">다시 한번 검색해주세요 :)</string>
+    <string name="text_search_nosearch_head">검색 결과가 없어요</string>
+    <string name="text_search_nosearch_subhead">다시 한번 검색해주세요 :)</string>
     <string name="text_dlg_delete_cancel">취소</string>
     <string name="text_dlg_delete_confirm">확인</string>
     <string name="text_login_email_title">이메일로 로그인</string>
@@ -43,4 +38,10 @@
     <string name="btn_signup_username_confirm">완료</string>
     <string name="facebook_app_id">989505941705090</string>
     <string name="fb_login_protocol_scheme">fb989505941705090</string>
+    <string name="text_user_label_bookmark">북마크한 책 :)</string>
+    <string name="text_home_label_popular">인기 도서 TOP9 🔥</string>
+    <string name="text_ihome_label_author">작가</string>
+    <string name="text_ihome_label_publisher">출판사</string>
+    <string name="text_ihome_label_price">가격</string>
+    <string name="text_ihome_link"><u>링크</u></string>
 </resources>
