--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="text_login_email_find"><u>아직 계정이 없으신가요?</u></string>
     <string name="btn_login_email_confirm">로그인</string>
     <string name="text_login_title">My Library</string>
-    <string name="text_login_btn">이메일로 로그인</string>
+    <string name="text_login_email_btn">이메일로 로그인</string>
     <string name="text_login_label_signup">아직 계정이 없으신가요?</string>
     <string name="text_login_signup"><u>여기에서 계정을 만드세요!</u></string>
     <string name="text_signup_email_title">이메일로 회원가입</string>
