--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,8 @@
     <string name="text_setting_label_account">연결된 계정</string>
     <string name="text_setting_label_logout">로그아웃</string>
     <string name="text_setting_label_servicewithdrawal">서비스 탈퇴</string>
+    <string name="text_setting_username_title">닉네임 변경</string>
+    <string name="text_setting_username_label">닉네임 입력</string>
+    <string name="edit_setting_username">두 글자 이상 입력</string>
+    <string name="btn_setting_username_confirm">완료</string>
 </resources>
